# tactics-exploration

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  Cargo.toml  LICENSE-MIT  README.md  devlog.md
.cargo/: config.toml
.github/workflows/: rust.yml
.pi/skills/bevy-tactics/: SKILL.md
.pi/skills/play-test/: SKILL.md
.pi/skills/play-test/scripts/: build-and-serve.sh  input.js  skip-to-battle.sh  stop-server.sh  wait-for-log.js
assets/map_assets/: README.md
assets/map_assets/example-map/: example-map.tmx  iso-64x64-building.tsx  iso-64x64-outside.tsx
assets/map_assets/tinytactics-32-map/: 20240420tinyTacticsTileset00.tsx  example-map-tiny-tactics.tmx
assets/misc_assets/acid-vfx/: README.md
assets/misc_assets/fire_effect_2/: README.md
assets/unit_assets/: README.md
assets/unit_assets/spritesheets/: cleric_animation_data.json  fighter_animation_data.json  mage_animation_data.json
assets/utility_assets/: README.md
deck/: tactics-exploration.desktop
scripts/: build-deck.sh  build-wasm.sh
src/: animation.rs  args.rs  assets.rs  battle.rs  battle_menu.rs  battle_phase.rs  camera.rs  combat.rs  dungeon.rs  enemy.rs  equipment.rs  gameplay_effects.rs  grid.rs  grid_cursor.rs  interactable.rs  join_game_menu.rs  lib.rs  main.rs  main_menu.rs  map_generation.rs  menu.rs  player.rs  projectile.rs  save_game.rs  unit.rs  unit_stats.rs
src/bevy_ecs_tilemap_example/: tiled.rs
web/: fix-audio.js  index.html
