[package]
name = "tactics-exploration"
version = "0.1.0"
edition = "2024"
default-run = "tactics-exploration"

[dependencies]
anyhow = "1.0.100"
# Using dynamic_linking as described here
# https://bevy.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.35.0"
bevy_common_assets = { version = "0.14.0", features = ["json"] }
bevy_ecs_tiled = { version = "0.10.0", features = ["debug"] }
bevy_ecs_tilemap = "0.17.0"
bevy_egui = "0.38.0"
bevy_spritesheet_animation = "5.0.0"
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
leafwing-input-manager = "0.19.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiled = { version = "0.14.0", default-features = false }
thiserror = { version = "2.0" }

# Bevy docs optimizations
# https://bevy.org/learn/quick-start/getting-started/setup/
#
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
env_logger = "0.11.8"
